클리어 DB, Controller 만듬

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.datasource.username=root
 spring.datasource.password=chan0401
 
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=create
